# baryrat

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  aaa.py  baryrat.py  pyproject.toml  setup.py  test.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
